# Docs_Mentor

./: .gitignore  Block#3+Providers.md  Block#3_RAG-chat.md  Dockerfile  Docs_Mentor_Roadmap.md  README.md  TEST.md  docker-compose.yml  error_test.txt  manage.py  pyproject.toml  pytest.ini  test.http  test.txt  test_chunking.py  test_gonka_api.py  test_gonka_full.py  test_mkdocs_parser.py  test_sphinx_parser.py  test_task.py  test_universal_parser.py
docs_mentor/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
knowledge_bases_app/: admin.py  apps.py  chunking.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
knowledge_bases_app/migrations/: 0001_initial.py  0002_documentchunk.py  0002_initial.py  0003_knowledgebase_error_message.py
knowledge_bases_app/parsers/: base.py  mkdocs_parser.py  sphinx_parser.py  universal_parser.py
llms_app/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
llms_app/migrations/: 0001_initial.py  0002_userprovidersettings.py
rag_chat_service/: Dockerfile  auth.py  config.py  database.py  deps.py  embeddings.py  main.py
rag_chat_service/routers/: __init__.py  chat.py  health.py
rag_chat_service/services/: __init__.py  django_client.py  llm_client.py  provider_factory.py
rag_chat_service/utils/: logging_config.py
static/css/: main.css
static/js/: auth.js  chat.js  sidebar-left.js  sidebar-right.js
static/scss/: _base.scss  _chat.scss  _header.scss  (+5 more)
templates/: login.html  register.html
tests/: conftest.py
users_app/: admin.py  models.py  serializers.py  urls.py  views.py
(+11 files in other folders)
